# ml-coding-practice-pytorch

./: .gitignore  LICENSE  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt  test_mse_manual.py  verify_loss_functions.py
.git.hooks/: pre-commit  prepare-commit-msg
.github/chatmodes/: BeastMode_GPT4.1_v1.chatmode.md  BeastMode_GPT5mini_v1.chatmode.md  BeastMode_Gemini3Pro_v1.chatmode.md  BeastMode_Sonnet4.5_v1.chatmode.md
01_question/01_activation_function/: 01_sigmoid.ipynb  01_sigmoid.py  02_relu.ipynb  02_relu.py  03_tanh.ipynb  03_tanh.py  04_softmax.ipynb  04_softmax.py  notebook_setup.py
01_question/02_loss_function/: 01_mse.ipynb  02_cross_entropy.ipynb  03_binary_cross_entropy.ipynb  README.md
01_question/03_tensor_operations/: 01_tensor_basics.ipynb  02_tensor_reshape.ipynb  README.md
01_question/04_normalization/: 01_batch_norm.ipynb
01_question/05_matrix_operations/: 01_matrix_multiply.ipynb  README.md
01_question/06_optimizers/: 01_sgd.ipynb  02_momentum.ipynb
01_question/07_convolution/: 01_conv2d.ipynb
01_question/08_pooling/: 01_max_pooling.ipynb  README.md
01_question/09_regularization/: 01_dropout.ipynb
01_question/10_weight_initialization/: 01_xavier.ipynb  02_he.ipynb
01_question/11_advanced_optimizers/: 01_adam.ipynb  02_rmsprop.ipynb
01_question_notebook/01_activation_function/: 01_sigmoid.ipynb  02_relu.ipynb  03_tanh.ipynb  04_softmax.ipynb  notebook_setup.py
temp/: FCOS.ipynb  anchor_box.ipynb  cartpole.ipynb  img_input.ipynb  scratch.ipynb  temp.ipynb
test_src/: notebook_runner.py  test_runner.py
(+42 files in other folders)
