[project]
name = "uv-template-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
