[project]
name = "ml-coding-practice-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "stable-baselines3>=2.7.1",
    "swig>=4.4.1",
    "tensorboard>=2.20.0",
    "gymnasium[box2d]>=1.2.3",
    "matplotlib>=3.10.8",
    "ipykernel>=7.1.0",
    "nbstripout>=0.8.2",
    "opencv-python>=4.11.0.86",
]
